--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,13 @@
 body {
     margin: 0px;
     margin-top: 100px;
-    text-align: center;
     background-color: black;
     color: white;
     font-family: 'Bungee', cursive;
+}
+
+.centered {
+	text-align: center;
 }
 
 img {
@@ -37,4 +40,15 @@ h3 {
 
 p {
     font-size: 20px;
+}
+.tt {
+	vertical-align: middle;
+}
+
+.error {
+	color: #ff3300;
+}
+
+#leftcont {
+	float: left;
 }
